@@ -2,6 +2,9 @@ Revision history for Perl extension JSON-RPC-Spec
 
 {{$NEXT}}
 
+    - add param matched hash (via Router::Simple)
+    - enable debug mode
+
 0.01 2014-08-13T14:28:56Z
 
     - original version
